2002-05-15  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (CompileClass): Fix bug 2256 for default
	private constructors, jacks test 8.8.7-runtime-default-3.
	(CompileClass): 
	* src/expr.cpp (UpdateLocalConstructors): Fix bug 206, when
	accessing private superconstructor from local class.

2002-05-15  David Lum  <david.lum@level8.com>

	* src/bytecode.cpp (EmitThisInvocation): Workaround for bug 2256 -
	fix constructors in local and anonymous classes.

2002-05-14  Mo DeJong  <supermo@bayarea.net>

	* src/bytecode.cpp (EndMethod): Invoke new
	Code_attribute::CodeLengthExceeded() method instead of checking
	the return value of Code_attribute::CodeLength(). The check was
	not valid since CodeLength() was returning a u2 value which would
	never be greater than 65535.
	* src/class.h (CodeLength, CodeLengthExceeded): Return 65535 when
	the value of CodeLength() exceeds the maximum allowable length to
	avoid an invalid conversion from int to u2. Bytecode for such a
	class will not be generated since CodeLengthExceeded() is checked
	before the class file is emitted. Fixes Jacks 4.10-jvms-2.

2002-05-14  Mo DeJong  <supermo@bayarea.net>

	* src/bytecode.cpp: Add casts to avoid compiler
	warning on signed/unsigned comparison.

2002-05-14  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (ProcessAmbiguousName): Fix name parsing to load
	packages that weren't imported - bug 2550.

2002-05-14  Eric Blake  <ebb9@email.byu.edu>

	* src/class.h (AddLocalVariable): Remove dead code.

2002-05-11  Max Gilead  <gilead@yellow.dyndns.org>

	* doc/jikes.1:
	* src/jikes.cpp:
	* src/modifier.cpp:
	* src/option.cpp:
	* src/option.h: Add +Pno-modifier-order option, to silence
	pedantic warnings about recommended modifier ordering.

2002-05-11  Eric Blake  <ebb9@email.byu.edu>

	* src/class.h:
	* src/bytecode.h:
	* src/bytecode.cpp: More bytecode optimizations: dead code
	removal, from bug 2849; goto next op removal; ?: optimizations;