@@ -1,5 +1,12 @@
 2002-05-15  Eric Blake  <ebb9@email.byu.edu>
 
+	* src/bytecode.cpp (EmitStatement):  Fix definite assignment
+	analysis of for loops - bug 2780.
+	* src/definite.cpp (DefiniteForStatement): Fix abrupt completion
+	bug in loops.
+
+2002-05-15  Eric Blake  <ebb9@email.byu.edu>
+
 	* src/bytecode.cpp (CompileClass): Fix bug 2256 for default
 	private constructors, jacks test 8.8.7-runtime-default-3.
 	(CompileClass): 
